# SMSEventLog

./: .bumpversion.cfg  .coverage  .funcignore  .gitattributes  .gitignore  AddEvent.frm  AddEvent.frx  Archive.bas  ComponentCO.bas  ComponentLookAhead.bas  CopyWorksheet.frm  CopyWorksheet.frx  Cummins_Import.bas  CustomFC.frm  CustomFC.frx  Declarations.bas  Details.frm  Details.frx  Email.bas  EventLog.py  Events.frm  Events.frx  FCSelector.frm  FCSelector.frx  FCSummary.frm  FCSummary.frx  FactoryCampaign.py  FactoryCampaigns.bas  FilePaths.bas  Folders.py  Functions.bas  Functions.py  Functions_2.bas  Functions_PicsDLS.bas  Functions_TSI.bas  Functions_getColNumbers.bas  ImportExport.bas  LICENSE  Launch.py  LinkCO.frm  (+77 more)
HttpTrigger/: __init__.py
SQL/: UnitInfo.sql
TimerImportDowntime/: __init__.py  function.json
_docs/: All_KA_Units.csv  unitimport.csv
_info/: README_DEV.md
_vba/: FunctionEMA.vb  Functions.vb  TurtleModlue.bas  cAccount.vb  cBitmex.bas  cDiscord.bas  cOrdArray.vb  cOrder.vb  cPosition.bas  cSymBacktest.vb  cTrade.vb  cTxn.vb  cUser.bas
archive/: DataFrameGUI.py  DataFrame_GUI_Test.py  df_gui.py  excel.py  import file.py  userform_archive.py
az_HttpTrigger/: __init__.py
az_TimerImportDT/: __init__.py  function.json
az_TimerImportSMR/: __init__.py  function.json
build_scripts/: build.bat  build.py  build.sh  upload.bat  upload.sh
docs/: Launch.py
reports/: exec_summary_template.html  report_style.css  report_template.html
scripts/: actlog.py  processfiles.py
smseventlog/: __init__.py  availability.py  charts.py  components.py  credentials.py  database.py  dbmodel.py  dbtransaction.py  email.py  emails.py  (+19 more)
(+172 files in other folders)
