[tool.poetry]
name = "SMSEventLog"
version = "3.4.0"
description = "The SMS Event Log is a desktop application to create a single source of truth for a variety of technical information related to equipment events/failures/work completed."
authors = ["Jayme Gordon <jaymegordo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
PyPika = "^0.47.7"
PyYAML = "^5.4.1"
SQLAlchemy = "^1.3.23"
pyodbc = "^4.0.30"
xlrd = "^2.0.1"
bs4 = "^0.0.1"
QDarkStyle = "^2.8.1"
exchangelib = "^4.0.0"
discord = "^1.0.1"
azure-functions = "^1.6.0"
openpyxl = "^3.0.7"
PyQt5 = "^5.15.4"
plotly = "^4.14.3"
seaborn = "^0.11.1"
selenium = "^3.141.0"
joblib = "^1.0.1"
WeasyPrint = "^52.3"
Jinja2 = "^2.11.3"
CairoSVG = "^2.5.2"
sentry-sdk = "^1.0.0"
kaleido = "^0.2.1"
pypandoc = "^1.5"
psutil = "^5.8.0"
packaging = "^20.9"
chromedriver-autoinstaller = {git = "https://github.com/jaymegordo/python-chromedriver-autoinstaller.git"}
appscript = {version = "^1.1.2", markers = "sys_platform == 'darwin'"}
pywin32 = {version = "^300", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
jupyter = "^1.0.0"
sqlacodegen = "^2.3.0"
bump2version = "^1.0.1"
PyUpdater-S3-Plugin = "^4.1.2"
pandas_access = "^0.0.1"
pytest = "^6.2.2"
pyupdater = {git = "https://github.com/Digital-Sapphire/PyUpdater.git"}
pyinstaller = {git = "https://github.com/pyinstaller/pyinstaller.git"}
pytest-cov = "^2.11.1"
openpyxl = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
